4.16: 3/XX/2011 (svn rYYYY)
	* CORE: Fixed problem with SQLite (JDBC and Android) was not handling nested transactions correctly.  Fixed bug #3208074.
	* Android: Fixed problem with SQLite nested transactions correctly.  They are not supported under Android.

4.15: 3/7/2011 (svn r1513)
	* CORE: Fixed a problem where Integer and Long fields could not be id fields.  Fixes bug #3202117.
	* CORE: Resolved bad problem with querying for objects with null foreign field values.  Fixes bug #3199649.  Thanks to Micael.
	* CORE: Removed the confusing Where().foreignIdEq() and foreignIdIn() methods.  Little extra value and loads of confusion.
	* CORE: Refactored the +1/-1 dance that core was doing to access and set SQL arguments.  Now everything is 0 based in -CORE.
	* JDBC: Changed TableCreator to take a list of Dao instead of BaseDaoImpl.
	* JDBC: Added alpha version of a generic ODBC database type.  Had to refactor null detection.  Thanks much to Dale Asberry.
	* JDBC: Added alpha version of a Netezza database type.  Thanks much to Richard Kooijman.

4.14: 2/28/2011 (svn r1474)
	* CORE: Added BYTE_ARRAY type for handling byte[] directly and not as a serializable.  dataType _must_ be specified.
	* CORE: Changed SERIALIZABLE type so that it _must_ be specified with the dataType.
	* CORE: Added a Where.raw() method which allows you to inject a raw statement into the WHERE SQL clause.

4.13: 2/26/2011 (svn r1453)
	* CORE: Added a special default string to @DatabaseField to allow default values of "".  Fixes bug #3191367.
	* CORE: Added parameters to the queryRaw(), updateRaw(), and executeRaw() DAO methods.  Thanks to Luke.
	* CORE: Added support for the QueryBuilder.offset() method.  Not supported on all database types.
	* CORE: Added initial ping statements for verification that the database connection is still valid.
	* CORE: Revamped the test hierarchy and implemented H2 stubs to be able to test CORE better.