@@ -1,6 +1,8 @@
 4.16: 3/XX/2011 (svn rYYYY)
+	* CORE: Added the STRING_BYTES DataType for supporting storing Unicode strings as byte[] blobs in the database.
 	* CORE: Fixed problem with SQLite (JDBC and Android) was not handling nested transactions correctly.  Fixed bug #3208074.
 	* Android: Fixed problem with SQLite nested transactions correctly.  They are not supported under Android.
+	* Android: Added the STRING_BYTES DataType so you can store Unicode strings in SQLite appropriately.
 
 4.15: 3/7/2011 (svn r1513)
 	* CORE: Fixed a problem where Integer and Long fields could not be id fields.  Fixes bug #3202117.
